service integration and parsing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ARInspectDemo</string>
+    <string name="nonetwork">Network Error</string>
+    <string name="nodata">Data not found</string>
 </resources>
